[package]
name = "rsftch"
version = "0.5.3"
edition = "2021"
authors = ["Charklie charliejohanid@gmail.com"]
license = "MIT"
description = "Lightning fast hardware fetch tool written in rust."
readme = "README.md"
repository = "https://github.com/charklie/rsftch"
keywords = ["fetch", "rust", "neofetch"]
categories = ["command-line-utilities"]

[dependencies]
colored = "2.1.0"
libmacchina = "7.2.2"
rayon = "1.10.0"
serde = { version = "1.0.200", features = [ "derive" ] }
serde_json = "1.0.116"
